--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,13 +44,18 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install security tools
+      - name: Install pip-audit
         run: |
           python -m pip install --upgrade pip
-          pip install pip-audit trufflehog
+          pip install pip-audit
 
       - name: Run pip-audit
         run: pip-audit -r requirements.txt
 
+      - name: Install TruffleHog (v3)
+        run: |
+          curl -L https://github.com/trufflesecurity/trufflehog/releases/latest/download/trufflehog_linux_amd64 -o trufflehog
+          chmod +x trufflehog
+
       - name: Run TruffleHog
-        run: trufflehog filesystem --no-update --fail .
+        run: ./trufflehog filesystem --no-update --fail .
