--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,14 @@ dependencies = [
     "requests>=2.32.5",
     "uvicorn>=0.38.0",
 ]
+
+
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
